# AliasT

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-daemon-ipc-ghost-text/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-history-based-suggestions/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md
.planning/phases/03-natural-language-mode/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md
.planning/phases/04-context-ranking-intelligence/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-cloud-backends-terminal-compatibility/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md
.planning/phases/06-project-rename/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-ci-cd-release-pipeline/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-homebrew-tap-formula/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md
crates/alias-core/: Cargo.toml
crates/alias-daemon/: Cargo.toml
crates/alias-daemon/src/: connection.rs  lib.rs  lifecycle.rs  main.rs  server.rs
crates/alias-daemon/tests/: e2e_tests.rs  enrich_prompt_tests.rs  lifecycle_tests.rs  server_tests.rs
crates/alias-protocol/: Cargo.toml
crates/aliast-core/: Cargo.toml
crates/aliast-core/src/: lib.rs
crates/aliast-core/src/ai/: claude.rs  mod.rs  ollama.rs  openai.rs
crates/aliast-core/src/history/: mod.rs  parser.rs  store.rs
crates/aliast-core/src/predict/: grammar.rs  grammars_data.rs  mod.rs  paths.rs
crates/aliast-core/tests/: ai_http_tests.rs  ai_sanitize_tests.rs  ai_tests.rs  grammar_tests.rs  history_bytes_tests.rs  history_parser_tests.rs  history_store_tests.rs  paths_tests.rs  pipeline_tests.rs  retention_tests.rs  store_permissions_tests.rs  suggestion_tests.rs
crates/aliast-daemon/: Cargo.toml
crates/aliast-daemon/src/: connection.rs  doctor.rs  lib.rs  lifecycle.rs  main.rs  migration.rs  server.rs
crates/aliast-daemon/tests/: cli_import_stats_tests.rs  cli_restart_logs_tests.rs  cli_start_tests.rs  doctor_ollama_tests.rs  doctor_tests.rs  e2e_tests.rs  enrich_prompt_tests.rs  lifecycle_tests.rs  migration_tests.rs  server_tests.rs
crates/aliast-protocol/: Cargo.toml
docs/: terminal-compatibility.md
packaging/homebrew/: aliast.rb
plugin/: alias.plugin.zsh  aliast.plugin.zsh
plugin/tests/: json_test.zsh
(+28 files in other folders)
