[package]
name = "alias-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
alias-protocol = { path = "../alias-protocol" }
alias-core = { path = "../alias-core" }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
directories = "6.0"
libc = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
