[package]
name = "aliast-core"
version.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
aliast-protocol = { path = "../aliast-protocol" }
rusqlite = { version = "0.39", features = ["bundled"] }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["rt", "sync"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.50", features = ["full"] }
wiremock = "0.6"
