[package]
name = "aliast-daemon"
version.workspace = true
edition = "2024"

[[bin]]
name = "aliast"
path = "src/main.rs"

[dependencies]
aliast-protocol = { path = "../aliast-protocol" }
aliast-core = { path = "../aliast-core" }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
directories = "6.0"
libc = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
